dataset1235/2025-2/610742602/users/2447224811/executions/906907063_211162095.log
== SUBMISSION (2025-08-19 20:53:35)
-- CODE: 
print("")
"print"
print("")
"print"
"nalbert"
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 23:21:17)
-- CODE: 
print("Universidade Federal do Amazonas")
print("Universidade Federal do Amazonas")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 20:54:02)
-- CODE: 
print("")
"print"
print("")
"print"
"nalbert"
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 20:55:17)
-- CODE: 
print("")
("print")
print()
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 20:56:05)
-- CODE: 
print("")
("print")
"XX"
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 20:54:30)
-- CODE: 
print("")
("print")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 20:48:33)
-- CODE: 
print("")Ellipsis
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print("")Ellipsis
             ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print("")Ellipsis
             ^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 20:52:42)
-- CODE: 
print("")
"print"
print("")
"print"
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 20:55:57)
-- CODE: 
print("")
("print")
"XX"
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 20:52:02)
-- CODE: 
print("")
"print"
print("")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 20:52:18)
-- CODE: 
print("")
"print"
print("")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 20:52:43)
-- CODE: 
print("")
"print"
print("")
"print"
-- EXECUTION TIME: 
0.02
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 20:54:31)
-- CODE: 
print("")
("print")

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 20:55:59)
-- CODE: 
print("")
("print")
"XX"
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 20:51:19)
-- CODE: 
print("")
"print"
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 20:52:21)
-- CODE: 
print("")
"print"
print("")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 20:54:28)
-- CODE: 
print("")
("print")

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 20:48:35)
-- CODE: 
print("")Ellipsis
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print("")Ellipsis
             ^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print("")Ellipsis
             ^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 20:53:36)
-- CODE: 
print("")
"print"
print("")
"print"
"nalbert"
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 20:50:27)
-- CODE: 
print("")
"print"
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 20:54:32)
-- CODE: 
print("")
("print")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 20:56:47)
-- CODE: 
print("Universidade Federal do Amazonas")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 20:55:48)
-- CODE: 
print("")
("print")
"UFAM"
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:21:14)
-- CODE: 
print("Universidade Federal do Amazonas")
print("Universidade Federal do Amazonas")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 20:55:47)
-- CODE: 
print("")
("print")
"UFAM"
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 20:52:23)
-- CODE: 
print("")
"print"
print("")

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 20:53:19)
-- CODE: 
print("")
"print"
print("")
"print"
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 20:55:01)
-- CODE: 
print("")
("print")

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 20:51:10)
-- CODE: 
print("")
"print"
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 20:55:44)
-- CODE: 
print("")
("print")
"UFAM"
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 20:51:12)
-- CODE: 
print("")
"print"
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 20:55:22)
-- CODE: 
print("")
("print")
print()
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 20:51:40)
-- CODE: 
print("")
"print"
"print"
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 20:46:57)
-- CODE: 
print("")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
